; ModuleID = '/home/carl/AnghaBench/radare2/libr/main/extr_radare2.c_mustSaveHistory.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/main/extr_radare2.c_mustSaveHistory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [13 x i8] c"scr.histsave\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @mustSaveHistory to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mustSaveHistory(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = call i32 @r_config_get_i(i32* %4, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %13

8:                                                ; preds = %1
  %9 = call i32 (...) @r_cons_is_interactive()
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %8
  store i32 0, i32* %2, align 4
  br label %13

12:                                               ; preds = %8
  store i32 1, i32* %2, align 4
  br label %13

13:                                               ; preds = %12, %11, %7
  %14 = load i32, i32* %2, align 4
  ret i32 %14
}

declare dso_local i32 @r_config_get_i(i32*, i8*) #1

declare dso_local i32 @r_cons_is_interactive(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
